--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /* reset */
 *{
   margin: 0;
+  padding: 0;
+  /* con questa istruzione si evita il commarsi dei padding e border a width e height */
+  box-sizing: border-box;
 }
 
 body{
@@ -9,9 +12,19 @@ body{
   color:darkcyan;
 }
 
+#titolone{
+  color: aqua;
+}
+
+.titolo-grande{
+  color: blueviolet;
+}
+
 h1{
   text-align: center;
+  color: #EB6E60;
 }
+
 
 section{
   background-color: burlywood;
@@ -22,15 +35,44 @@ span{
   color: chocolate;
 }
 
+header{
+  padding: 40px;
+  text-align: center;
+}
+
+
+.menu ul{
+  list-style: none;
+}
+
+.menu ul li{
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: #EB6E60;
+  margin: 0 20px;
+}
+
+.menu ul li a{
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.menu ul li a:hover{
+  text-decoration: underline;
+}
+
 .testo-bold{
   /* 800 = bold - 400 = default */
   font-weight: 800;
+  display: block;
 }
 
 #testo-principale{
   color: blueviolet;
   font-style: italic;
   text-align: justify;
+  padding: 20px 0;
+  background-color: antiquewhite;
 }
 
 .testo-secondario{
@@ -38,19 +80,44 @@ span{
   text-align: right;
 }
 
+.container{
+  width: 90%;
+  max-width: 1080px;
+  background-color: #EB6E60;
+  padding: 20px;
+  margin: 0 auto;
+}
+
 .box{
+  text-align: center;
   width: 500px;
   height: 300px;
   background-color: brown;
+  margin: 20px auto;
+  border-radius: 10px;
+  color: white;
+  padding: 20px;
+  border: 10px solid black;
+}
+
+.testo{
+  margin-bottom: 70px;
+  background-color: aqua;
 }
 
 .box-piccolo{
   width: 100px;
   height: 100px;
+  border: solid;
+  border-width: 2px 5px;
+  border-color: red black violet yellow;
+  margin: 50px;
+  display: inline-block;
 }
 
 .box-arancio{
   background-color: #EB6E60;
+  
 }
 
 .box-arancio2{
