--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   color:darkcyan;
+  padding-bottom: 100px;
 }
 
 #titolone{
@@ -60,6 +61,9 @@ header{
 .menu ul li a:hover{
   text-decoration: underline;
 }
+.menu ul li a:active{
+  color: yellow;
+}
 
 .testo-bold{
   /* 800 = bold - 400 = default */
@@ -98,6 +102,11 @@ header{
   color: white;
   padding: 20px;
   border: 10px solid black;
+}
+
+.box:hover{
+  background-color: yellow;
+  color: brown;
 }
 
 .testo{
@@ -153,4 +162,44 @@ header{
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+/* tutti gli ul che hanno l'attributo class che contienete 'lista-' */
+ul[class*='lista-']{
+  margin: 20px;
+}
+
+
+
+.lista-principale li:last-child{
+  color: yellow;
+}
+
+/* il quarto elemento della lista lista-principale sia blu */
+.lista-principale li:nth-child(4){
+  color: blue;
+}
+
+
+/*tutti gli elementi dispari della lista princiale siano verdi*/
+.lista-principale li:nth-child(odd){
+  color: green;
+}
+/*tutti gli elementi pari della lista secondaria siano rossi*/
+.lista-secondaria li:nth-child(even){
+  color: red;
+}
+
+.lista-principale li:first-child{
+  color: red;
+}
+
+/* ogni 3 elementi della lista 3 rossi */
+.lista-3 li:nth-child(3n){
+  color: red;
+}
+
+/* ogni 3 elementi della lista 3 rossi a partire dal quinto */
+.lista-4 li:nth-child(3n + 5){
+  color: red;
 }
